--- a/1-EntradaSalida/EntradaSalida-04.html
+++ b/1-EntradaSalida/EntradaSalida-04.html
@@ -40,7 +40,7 @@
 		<form class=" animated bounceInLeft FormIngreso">
 		<h1>Ingrese Su Nombre</h1>
 			<input type="text" readonly placeholder="Su nombre" id="txtIdNombre">
-			<a  class="MiBotonUTNnav" onclick="mostrar()" >Mostrar</a>
+			<a  class="MiBotonUTNnav" onclick="mostrar()" >Ingresar</a>
 			
 
 	</form>				
@@ -53,8 +53,8 @@
 			
 				<h3>
 					Debemos lograr tomar un dato por '=prompt()' 
-					</br>y lo muestro por ID.value
-					</br> al presionar el botón 'mostrar'
+					</br>y lo muestro por ID.value 
+					</br> al presionar el botón 'Ingresar' <!--a Se corrigio para que coincida con el boton-->
 				</h3>
 			
      
